# crop-doctor-pro

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cropdoctor/: cli.py  labels.py  pipeline.py  server.py  types.py  webapp.py
cropdoctor/faithfulness/: verify.py
cropdoctor/gate/: gate.py
cropdoctor/guidance/: compose.py
cropdoctor/kb/: loader.py
cropdoctor/llm/: anthropic_adapter.py  ollama_adapter.py  openai_adapter.py  provider.py
cropdoctor/vision/: calibration.py  classifier.py  quality.py
cropdoctor/web/: app.js  index.html  styles.css
tests/: test_core.py
train/: evaluate.py  train.py
