[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-doctor-pro"
version = "0.1.0"
description = "Grounded crop-leaf disease diagnosis with a real vision model, calibrated abstention, a curated knowledge base, and a provider-agnostic LLM guidance layer."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "pillow>=10.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
web = ["gradio>=4.0", "fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
train = ["datasets>=2.18", "accelerate>=0.30", "scikit-learn>=1.3"]
dev = ["pytest>=8.0"]

[project.scripts]
cropdoctor = "cropdoctor.cli:app"

[tool.setuptools.packages.find]
include = ["cropdoctor*"]

[tool.setuptools.package-data]
cropdoctor = ["kb/data/*.yaml"]
